--- a/consult/less/mainpage.less
+++ b/consult/less/mainpage.less
@@ -356,6 +356,44 @@ body.page-mainpage{
                 padding: 0;
             }
         }
+        form.ask-question-form{
+            margin-bottom: 20px;
+            overflow: hidden;
+            display:none;
+            i.fa-close{
+                position: absolute;
+                right:30px;
+                top: 30px;
+                z-index: 1;
+                cursor: pointer;
+                &:hover{
+                    color:@sea;
+                }
+            }
+            h4{
+                margin-top: 0;
+                padding-top: 0;
+            }
+            .field.question{
+                width: 100%;
+                textarea{
+                    height:100px;
+                }
+            }
+            .field.category{
+                width: 50%;
+                float: left;
+                margin-top: 10px;
+                .select2-container{
+                    width: 100% !important;
+                }
+            }
+            input[type="submit"]{
+                float: right;
+                margin-top: 10px;
+                padding: 9px 40px 7px 40px;
+            }
+        }
         section.questions{
             overflow: hidden;
             .question{
