--- a/consult/less/page_question_list.less
+++ b/consult/less/page_question_list.less
@@ -166,6 +166,24 @@ body.page-question-list{
 					}
 				}
 			}
+			.write-answer{
+				background: #f8f8f8;
+				box-sizing:border-box;
+				overflow: hidden;
+				-moz-box-sizing:border-box;
+				padding:20px 20px 10px 20px;
+				border:solid 1px #d2ded9;
+				border-radius: 0 0 5px 5px;
+				-o-border-radius:  0 0 5px 5px;
+				-moz-border-radius:  0 0 5px 5px;
+				-webkit-border-radius:  0 0 5px 5px;
+				textarea{
+					height:60px;
+				}
+				input[type="submit"]{
+					float: right;
+				}
+			}
 		}
 	}
 }
