--- a/consult/less/modal_sign_up_consultation.less
+++ b/consult/less/modal_sign_up_consultation.less
@@ -8,7 +8,7 @@
 	z-index: 10;
 	& > .container{
 		position: relative;
-		width: 480px;
+		width: 520px;
 		height: auto;
 		margin:100px auto;
 		background: @white;
@@ -53,8 +53,9 @@
 			.about{
 				overflow: hidden;
 				.rating-block{
-					float: right;
+					//float: right;
 					width: 50px;
+					margin-bottom: 10px;
 				}
 				p.name{
 					display: block;
@@ -82,7 +83,12 @@
 			}
 		}
 		form{
-			overflow: hidden;
+			//overflow: hidden;
+			width: 480px;
+			position: relative;
+			h5{
+				margin-top: 20px;
+			}
 			.calendar{
 				margin:0;
 				header{
@@ -90,6 +96,96 @@
 						color:@sea;
 					}
 				}
+			}
+			.left{
+				//float: left;
+				width: 300px;
+				.time-slider{
+					width: 290px;
+					webkit-user-select:none;
+					-moz-user-select:none;
+					.bar{
+						margin-top: 20px;
+						border-radius:2px;
+						-moz-border-radius:2px;
+						-o-border-radius:2px;
+						-webkit-border-radius:2px;
+						width: 100%;
+						height: 2px;
+						background: url('../images/sliderbar-bg.png') right center repeat-y;
+						background-position:-290px 0;
+						.handler{
+							position:relative;
+							cursor: pointer;
+							width: 20px;
+							height: 20px;
+							border:solid 2px @white;
+							background: @sky;
+							margin-left: -10px;
+							top:-11px;
+							left: 60px;
+							border-radius:20px;
+							-o-border-radius:20px;
+							-webkit-border-radius:20px;
+							-moz-border-radius:20px;
+						}
+					}
+					.labels{
+						width: 115%;
+						margin-top: 10px;
+						overflow: hidden;
+						-webkit-user-select:none;
+						-moz-user-select:none;
+						.label{
+							float: left;
+							width: 25%;
+							font-size:1.2rem;
+						}
+					}
+				}
+				p.price{
+					color:@sky;
+					font-size:3.0rem;
+					margin-top: -10px;
+					margin-bottom: 35px;
+					i{
+						font-size:2.6rem;
+					}
+				}
+			}
+			.right{
+				position: absolute;
+				bottom:0;
+				right:0;
+				width: 124px;
+				.time-container{
+					padding:20px;
+					border:solid 1px @sea;
+					border-radius:5px;
+					-o-border-radius:5px;
+					-moz-border-radius:5px;
+					-webkit-border-radius:5px;
+					.grid{
+						//width: 100px;
+						line-height: 100%;
+						font-size:1.2rem;
+						.row{
+							text-align: center;
+							padding: 2.4px 0;
+							&.unwork{
+								background: #aabdbb;
+								color:@white;
+							}
+							&.reserved{
+								background: #33b679;
+								color:@white;
+							}
+						}
+					}
+				}
+			}
+			input[type="submit"]{
+				margin-right: 20px;
 			}
 		}
 	}
