--- a/consult/less/page_profile.less
+++ b/consult/less/page_profile.less
@@ -3,6 +3,15 @@
     width: 960px;
 }
 body.page-profile{
+    .unavailable-message{
+        text-align: center;
+        background: @yellow_dark;
+        margin-top: 20px;
+        color:#b28000;
+    }
+    .only-unuavailable{
+        display: none;
+    }
     .resume-section {
         overflow: hidden;
         .profile {
@@ -454,6 +463,36 @@ body.page-profile{
                         margin:10px auto 0 auto;
                     }
                 } 
+            }
+        }
+    }
+    &.unavailable{
+        .only-available{
+            display: none;
+        }
+        .only-unuavailable{
+            display: block;
+        }
+        .resume-section{
+            .sign-up{
+                display: none;
+            }
+        }
+        .partners-section, .reviews, .same-users-section{
+            display: none;
+        }
+        .information-section{
+            .wrapper{
+                overflow: visible;
+            }
+            .information{
+                margin-top: -170px;
+            }
+            .answers-list{
+                display: none;
+            }
+            .ask-question{
+                display: none;
             }
         }
     }
