--- a/consult/less/page_profile_settings.less
+++ b/consult/less/page_profile_settings.less
@@ -65,29 +65,81 @@ body.page-profile-settings{
                     margin-bottom: 5px;
                 }
                 input{
-                    margin-bottom: 5px;
+                    margin-bottom: 0;
                 }
                 .field{
-                    &.firstname, &.lastname, &.middlename, &.city, &.country{
+                    &.firstname, &.lastname, &.middlename{
                         float: left;
                         width: 48%;
                         margin-right: 4%;
-                        &.lastname, &.city{
+                        &.lastname{
                             margin-right: 0;
                         }
-                        .select2-container{
-                            width: 100% !important;
-                            margin-bottom: 5px;
-                        }
-                    }
-                    textarea{
-                        width: 100%;
-                        height: 100px;
-                        margin-bottom: 40px;
                     }
                 }
                 input[type="submit"]{
                     margin-right: 20px;
+                    margin-top: 20px;
+                }
+                .field{
+                    margin-bottom: 10px;
+                    &.gender{
+                        width: 48%;
+                        .select2-container{
+                            width: 100% !important;
+                        }
+                    }
+                    &.birthdate{
+                        .day{
+                            float: left;
+                            width: 25%;
+                            margin-right: 3%;
+                        }
+                        .month{
+                            float: left;
+                            width: 44%;
+                            margin-right: 3%;
+                        }
+                        .year{
+                            float: left;
+                            width: 25%;
+                        }
+                        .select2-container{
+                            width: 100% !important;
+                        }
+                    }
+                    &.country, &.city{
+                        float: left;
+                        width: 48% !important;
+                        margin-right: 4%;
+                        .select2-container{
+                            width: 100% !important;
+                        }
+                        &.city{
+                            margin-right: 0;
+                        }
+                    }
+                    &.visibility{
+                        div.radio{
+                            overflow: hidden;
+                            margin:2px 0;
+                            .radio.container{
+                                float: left;
+                                margin-right: 10px;
+                            }
+                            label{
+                                overflow: hidden;
+                                font-weight:normal;
+                                color:@sea_light;
+                                margin-top: 4px;
+                            }
+                        }
+                    }
+                    &.information{
+                        textarea{
+                            height: 100px;
+                        }
+                    }
                 }
             }
         }
