--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -1714,7 +1714,7 @@ body.page-mainpage > .content .professional-consults #show-all-users {
 /* line 6, page_profile.less */
 body.page-profile .unavailable-message {
   text-align: center;
-  background: #ffaa3e;
+  background: #fac944;
   margin-top: 20px;
   color: #b28000;
 }
