--- a/consult/less/page_profile.less
+++ b/consult/less/page_profile.less
@@ -5,7 +5,7 @@
 body.page-profile{
     .unavailable-message{
         text-align: center;
-        background: @yellow_dark;
+        background: @yellow;
         margin-top: 20px;
         color:#b28000;
     }
